Invalidate layer when its compositing configuration changed

When a composited scrolling layer's object is set 'pointer-events:none',
the layer will no longer use composited scrolling (though it is still
composited). This is controlled by ComputedStyle::VisibleToHitTesting().
When this happens, no other conditions trigger invalidation of the
layer. Now invalidate a layer when its compositing configuration
changed.

Bug: 758474
Cq-Include-Trybots: master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: I3c01a543a5424d8c746e901047abc606874e0290